# sycl-bfs

./: .gitignore  CMakeLists.txt  README.md  run_test.py
data/: README.md
data/enzymes/: ENZYMES_g1.edges.processed  ENZYMES_g10.edges.processed  ENZYMES_g101.edges.processed  ENZYMES_g103  ENZYMES_g293  ENZYMES_g295  ENZYMES_g295.edges.processed  ENZYMES_g296  ENZYMES_g296.edges.processed  README.md
include/: arg_parse.hpp  benchmark.hpp  bfs.hpp  host_data.hpp  kernel_sizes.hpp  operators.hpp  sycl_data.hpp  types.hpp  utils.hpp  utils_tiles.hpp
include/impl/: bottom_up_bfs.hpp  mul_bfs.hpp  simpl_bfs.hpp
include/impl/bfs_operators/: bottom_up_op.hpp  bottomup_op.hpp  frontier_op.hpp  naive.hpp
samples/: CMakeLists.txt
samples/include/: arg_parse.hpp
samples/src/: bottom_up_bfs_main.cpp  comp.cpp  frontier_bfs_main.cpp  main.cpp  simple_bfs_main.cpp
scripts/: README.md  check_bfs.py  collect_metrics.py  graph_gen.py
src/: bfs.cpp  bottom_up_bfs_main.cpp  frontier_bfs_main.cpp  main.cpp  mul_bfs.cpp  multi_bfs_main.cpp  simple_bfs_main.cpp  tile_bfs.cpp  tiled_bfs_main.cpp
src/impl/: bfs.cpp  mul_bfs.cpp  tile_bfs.cpp  tiled_bfs.cpp
